ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Expressions/parserTypeAssertionInObjectCreationExpression1/input.ts.stderr
error: Expression expected
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Expressions/parserTypeAssertionInObjectCreationExpression1/input.ts:1:5
  |
1 | new <T>Foo()
  |     ^

